syntax = "proto2";

package cloudprober.rds;

option go_package = "github.com/google/cloudprober/rds/proto";

service ResourceDiscovery {
  // ListResources returns the list of resources matching the URI provided in
  // the request.
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse) {}
}

message ListResourcesRequest {
  // Resources to list and the associated IP address that we are interested in.
  // Example:
  // {
  //   provider: "gcp"
  //   resource_path: "gce_instances/project-1"
  //   filter {
  //     key: "name"
  //     value: "ig-us-central1-.*"
  //   }
  //   ip_config {
  //     ip_type: PUBLIC
  //   }
  // }

  // Provider is the resource list provider, for example: "gcp", "aws", etc.
  required string provider = 1;

  // Provider specific resource path. For example: for GCP, it could be
  // "gce_instances/<project>", "regional_forwarding_rules/<project>", etc.
  optional string resource_path = 2;

  // Filters for the resources list. Filters are ANDed: all filters should
  // succeed for an item to included in the result list.
  repeated Filter filter = 3;

  // Optional. If resource has an IP (and a NIC) address, following
  // fields determine which IP address will be included in the results.
  optional IPConfig ip_config = 4;

  // If specified, and if provider supports it, server will send resources in
  // the response only if they have changed since the given timestamp. Since
  // there may be no resources in the response for non-caching reasons as well,
  // clients should use the "last_modified" field in the response to determine
  // if they need to update the local cache or not.
  optional int64 if_modified_since = 5;
}

message Filter {
  required string key = 1;
  required string value = 2;
}

message IPConfig {
  // NIC index
  optional int32 nic_index = 1 [default = 0];

  enum IPType {
    // Default IP of the resource.
    //  - Private IP for instance resource
    //  - Forwarding rule IP for forwarding rule.
    DEFAULT = 0;

    // Instance's external IP.
    PUBLIC = 1;

    // First IP address from the first Alias IP range. For example, for
    // alias IP range "192.168.12.0/24", 192.168.12.0 will be returned.
    // Supported only on GCE.
    ALIAS = 2;
  }
  optional IPType ip_type = 3;

  enum IPVersion {
    IP_VERSION_UNSPECIFIED = 0;
    IPV4 = 1;
    IPV6 = 2;
  }
  optional IPVersion ip_version = 2;
}

message Resource {
  // Resource name.
  required string name = 1;

  // Resource's IP address, selected based on the request's ip_config.
  optional string ip = 2;

  // Resource's port, if any.
  optional int32 port = 5;

  // Resource's labels, if any.
  map<string, string> labels = 6;

  // Last updated (in unix epoch).
  optional int64 last_updated = 7;

  // Id associated with the resource, if any.
  optional string id = 3;

  // Optional info associated with the resource. Some resource type may make use
  // of it.
  optional bytes info = 4;
}

message ListResourcesResponse {
  // There may not be any resources in the response if request contains the
  // "if_modified_since" field and provider "knows" that nothing has changed since
  // the if_modified_since timestamp.
  repeated Resource resources = 1;

  // When were resources last modified. This field will always be set if
  // provider has a way of figuring out last_modified timestamp for its
  // resources.
  optional int64 last_modified = 2;
}
